[gd_scene load_steps=15 format=3 uid="uid://dfehj0ebpawa0"]

[ext_resource type="Texture2D" uid="uid://b20en8nmq4c7x" path="res://assets/textures/UI/new_HUD/HUD_topPanel.svg" id="1_a3r1h"]
[ext_resource type="Script" uid="uid://cp8lu7v5xwqee" path="res://scenes/menus_ui/hud.gd" id="1_h1j47"]
[ext_resource type="Texture2D" uid="uid://bt1p5jtm8aw1l" path="res://assets/textures/UI/new_HUD/HUD_bottomPanel.svg" id="2_h1j47"]
[ext_resource type="Texture2D" uid="uid://clux3cdk0q4eo" path="res://assets/textures/UI/new_HUD/engineering_insignia_button.svg" id="2_w26gc"]
[ext_resource type="Script" uid="uid://7y7ofpana70q" path="res://scenes/menus_ui/top_HUD_UI.gd" id="3_cjw86"]
[ext_resource type="PackedScene" uid="uid://g3qxm0r002bc" path="res://scenes/menus_ui/hud_button.tscn" id="3_yl63j"]
[ext_resource type="PackedScene" uid="uid://chbr28imsjgnv" path="res://scenes/menus_ui/health_indicator.tscn" id="4_cg37a"]
[ext_resource type="PackedScene" uid="uid://cup0hh5dv0n1n" path="res://scenes/menus_ui/energy_bar.tscn" id="5_lntpl"]
[ext_resource type="LabelSettings" uid="uid://b4cf2e7l2ktky" path="res://resources/LCARS.tres" id="7_1l8e1"]
[ext_resource type="Texture2D" uid="uid://byr1t4wk3r0yl" path="res://assets/textures/UI/new_HUD/federation_symbol.svg" id="8_1l8e1"]
[ext_resource type="Texture2D" uid="uid://b6g254d043h22" path="res://assets/textures/UI/new_HUD/klingon_symbol.svg" id="9_akwr8"]
[ext_resource type="Texture2D" uid="uid://dhpxi3okw2mo0" path="res://assets/textures/UI/new_HUD/romulan_symbol.svg" id="10_a3r1h"]
[ext_resource type="Script" uid="uid://c14ywbiqs8efn" path="res://scenes/menus_ui/HUD_settings_button.gd" id="11_akwr8"]
[ext_resource type="PackedScene" uid="uid://nr3ksi6mj4h8" path="res://scenes/menus_ui/comms_IU.tscn" id="14_cjw86"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_h1j47")

[node name="TopPanel" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 101.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("1_a3r1h")
script = ExtResource("3_cjw86")

[node name="MarginContainer" type="MarginContainer" parent="TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="Mission" type="Label" parent="TopPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Mission: "
label_settings = ExtResource("7_1l8e1")

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="FedContainer" type="MarginContainer" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 10

[node name="Fed" type="TextureRect" parent="TopPanel/MarginContainer/HBoxContainer/FedContainer"]
modulate = Color(0.453633, 0.584588, 0.933372, 1)
layout_mode = 2
texture = ExtResource("8_1l8e1")
expand_mode = 3

[node name="FedScore" type="Label" parent="TopPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0000"
label_settings = ExtResource("7_1l8e1")

[node name="MarginContainer" type="MarginContainer" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="KlinContainer" type="MarginContainer" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 7
theme_override_constants/margin_bottom = 10

[node name="Klingon" type="TextureRect" parent="TopPanel/MarginContainer/HBoxContainer/KlinContainer"]
modulate = Color(0.880395, 0.210751, 0.256262, 1)
layout_mode = 2
texture = ExtResource("9_akwr8")
expand_mode = 3

[node name="KlingonScore" type="Label" parent="TopPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0000"
label_settings = ExtResource("7_1l8e1")

[node name="MarginContainer2" type="MarginContainer" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="RomContainer" type="MarginContainer" parent="TopPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 7
theme_override_constants/margin_bottom = 10

[node name="Romulan" type="TextureRect" parent="TopPanel/MarginContainer/HBoxContainer/RomContainer"]
modulate = Color(0.104224, 0.597945, 0.305314, 1)
layout_mode = 2
texture = ExtResource("10_a3r1h")
expand_mode = 3

[node name="RomScore" type="Label" parent="TopPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0000"
label_settings = ExtResource("7_1l8e1")

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 46.0
grow_horizontal = 0
scale = Vector2(0.85, 0.85)
pivot_offset = Vector2(40, 0)
size_flags_horizontal = 8
texture_normal = ExtResource("2_w26gc")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("11_akwr8")

[node name="BottomPanel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -110.0
offset_right = 1920.0
offset_bottom = 110.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("2_h1j47")

[node name="HUD_button" parent="." instance=ExtResource("3_yl63j")]
offset_left = 456.0
offset_top = 36.0
offset_right = 956.0
offset_bottom = 536.0
scale = Vector2(0.2, 0.2)

[node name="health_indicator" parent="." instance=ExtResource("4_cg37a")]
offset_left = 11.0
offset_top = 473.0
offset_right = 91.0
offset_bottom = 533.0

[node name="energy_bar" parent="." instance=ExtResource("5_lntpl")]
layout_mode = 0
offset_left = 99.0
offset_top = 533.0
offset_right = 159.0
offset_bottom = 553.0

[node name="Comms_UI" parent="." instance=ExtResource("14_cjw86")]
layout_mode = 1

[connection signal="pressed" from="SettingsButton" to="SettingsButton" method="_on_pressed"]
